Asignacion de Apellidos

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,10 +6,12 @@
     <thead style="border-color: blue 12px; background-color: chocolate;">
         <th>Id</th>
         <th>Nombre</th>
+        <th>Apellido</th>
     </thead>
     <tbody>
         <td>01</td>
-        <td>Nombre</td>
+        <td>Samuel</td>
+        <td>Fraile</td>
     </tbody>
 </table>
 =======
