Configracion de Componentes y Formulario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,5 @@
 <h1>{{title}}</h1>
 <h2>Prueba de taller</h2>
-<<<<<<< HEAD
 <div><p>iniciando la pruaba de cambios</p></div>
 <table  style="border-collapse: collapse; width: 16px;border-color: blue;">
     <thead style="border-color: blue 12px; background-color: chocolate;">
@@ -14,6 +13,7 @@
         <td>Fraile</td>
     </tbody>
 </table>
-=======
+
 <div>iniciando prueba</div>
->>>>>>> 42c44d90cc52642527291ef25f6045c63b6adaf3
+<app-ejercicios></app-ejercicios>
+
