--- a/src/app/ejercicios/ejercicios.component.html
+++ b/src/app/ejercicios/ejercicios.component.html
@@ -1,9 +1,11 @@
-<h2>{{ejercico.name | uppercase}}</h2>
+<h2>Listado de Ejercicos</h2>
+<ul class="ejercicios">
+  <li *ngFor="let ejercicio of ejercicios" (click)="onSelectEjercicio(ejercicio)" >
+    <span class="ejercicio">{{ejercicio.id}}</span> {{ejercicio.name}} {{ejercicio.surname}} {{ejercicio.Edad}}
+  </li>
+</ul>
+<div *ngIf="ejercicioSeleccionado">
+  <h2>Detalle</h2>
+<div><span>id: </span>{{ejercicioSeleccionado.name}}</div>
+</div>
 
-<div><span>id:</span>{{ejercico.id}}</div>
-<label>Nombre:
-  <input [(ngModel)]="ejercico.surname" placeholder="Apellido">
-</label>
-<div><span>Name:</span>{{ejercico.name}}</div>
-<div><span>SurName:</span>{{ejercico.surname}}</div>
-<div><span>Edad:</span>{{ejercico.Edad}}</div>
