--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,3 @@
 <h1>{{title}}</h1>
-<h2>Prueba de taller</h2>
-<div><p>iniciando la pruaba de cambios</p></div>
-<table  style="border-collapse: collapse; width: 16px;border-color: blue;">
-    <thead style="border-color: blue 12px; background-color: chocolate;">
-        <th>Id</th>
-        <th>Nombre</th>
-        <th>Apellido</th>
-    </thead>
-    <tbody>
-        <td>01</td>
-        <td>Samuel</td>
-        <td>Fraile</td>
-    </tbody>
-</table>
-
-<div>iniciando prueba</div>
 <app-ejercicios></app-ejercicios>
-
+<app-ejercicio-detalle></app-ejercicio-detalle>
