--- a/src/app/ejercicios/ejercicios.component.html
+++ b/src/app/ejercicios/ejercicios.component.html
@@ -1,7 +1,7 @@
 <h2>Listado de Ejercicos</h2>
 <ul class="ejercicios">
-  <li *ngFor="let ejercicio of ejercicios" (click)="onSelectEjercicio(ejercicio)" >
-    <span class="ejercicio">{{ejercicio.id}}</span> {{ejercicio.name}} {{ejercicio.surname}} {{ejercicio.Edad}}
+  <li *ngFor="let ejercicio of ejercicios" (click)="onSelectEjercicio(ejercicio)" [class.selected]="ejercicio===ejercicioSeleccionado" >
+    <span class="ejercicio">{{ejercicio.id}}</span> {{ejercicio.name}}
   </li>
 </ul>
 <div *ngIf="ejercicioSeleccionado">
