Input_Comunicar_Componentes

--- a/src/app/ejercicio-detalle/ejercicio-detalle.component.html
+++ b/src/app/ejercicio-detalle/ejercicio-detalle.component.html
@@ -1,1 +1,5 @@
-<p>ejercicio-detalle works!</p>
+<div *ngIf="ejercicio">
+  <h2>Detalle</h2>
+<div><span>id: </span>{{ejercicio.name}}</div>
+</div>
+
