--- a/src/app/ejercicios/ejercicios.component.html
+++ b/src/app/ejercicios/ejercicios.component.html
@@ -4,8 +4,4 @@
     <span class="ejercicio">{{ejercicio.id}}</span> {{ejercicio.name}}
   </li>
 </ul>
-<div *ngIf="ejercicioSeleccionado">
-  <h2>Detalle</h2>
-<div><span>id: </span>{{ejercicioSeleccionado.name}}</div>
-</div>
-
+<app-ejercicio-detalle [ejercicio]="ejercicioSeleccionado"></app-ejercicio-detalle>
