--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <h1>{{title}}</h1>
-<app-ejercicios></app-ejercicios>
+<nav>
+  <a routerLink="/ejercicios">PaginaEjercicios</a>
+</nav>
+<router-outlet></router-outlet>
+
 
